# AskDaVinci

./: README.md  db.sqlite3  manage.py  pyproject.toml
askdavinci/: asgi.py  settings.py  urls.py  wsgi.py
askdavinci/pythonci/: __init__.py
media/test/documents/: Long short-term memory - Wikipedia.txt  embeddings.csv  scraped.csv
pages/: apps.py  forms.py  models.py  signals.py  urls.py  views.py
pages/migrations/: 0001_initial.py  0002_chatfiles.py  0003_delete_chatfiles.py
pages/static/css/: base.css
pages/static/js/: base.js
pages/templates/: base.html
pages/templates/pages/: chat_bot.html  home.html
pages/templatetags/: custom_filters.py
users/: admin.py  forms.py  models.py  signals.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  logout.html  profile.html  signup.html
